force-app/main/default/objects/Competitor_Action__c/Competitor_Action__c.object-meta.xml
<CustomObject>
    <description>Competitor Actions from Vidrala Spain Org</description>
    <label>Competitor Action</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Competitor Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>