force-app/main/default/objects/Competitor_Action__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account record type Competitor filter</description>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Actions (Competitor)</relationshipLabel>
    <relationshipName>Competitor_Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>