force-app/main/default/objects/Competitor_Action__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Fecha</description>
    <inlineHelpText>Fecha</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>