force-app/main/default/objects/Competitor_Action__c/fields/Expected_Loss_Of_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Loss_Of_Volume__c</fullName>
    <label>Expected Loss Of Volume (Ton)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>