force-app/main/default/objects/Competitor_Action__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Altura</description>
    <inlineHelpText>Altura</inlineHelpText>
    <label>Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>