force-app/main/default/objects/Competitor_Action__c/fields/OM_VID_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_ProductCode__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>