force-app/main/default/objects/Competitor_Action__c/fields/Price_1000__c.field-meta.xml
<CustomField>
    <fullName>Price_1000__c</fullName>
    <description>Precio €/1000</description>
    <inlineHelpText>Precio €/1000</inlineHelpText>
    <label>Price €/1000</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>