force-app/main/default/objects/Competitor_Action__c/fields/Price_ton__c.field-meta.xml
<CustomField>
    <fullName>Price_ton__c</fullName>
    <formula>(Price_1000__c / Weight__c )*1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price €/ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>