force-app/main/default/objects/Competitor_Action__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Competitor Actions (Product)</relationshipLabel>
    <relationshipName>Competitor_Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>