force-app/main/default/objects/Competitor_Action__c/fields/Ton__c.field-meta.xml
<CustomField>
    <fullName>Ton__c</fullName>
    <description>(Weight  x  Units) % 1000000</description>
    <formula>(Weight__c  *  Units__c )/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Weight  x  Units) % 1000000</inlineHelpText>
    <label>Ton</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>