force-app/main/default/objects/Competitor_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Competitor__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Colour__c</columns>
    <columns>Price_1000__c</columns>
    <columns>Price_ton__c</columns>
    <columns>Ton__c</columns>
    <columns>Units__c</columns>
    <columns>Weight__c</columns>
    <columns>Height__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>